tests/baselines/reference/internalAliasEnumInsideLocalModuleWithoutExport.errors.txt
internalAliasEnumInsideLocalModuleWithoutExport.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasEnumInsideLocalModuleWithoutExport.ts(9,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasEnumInsideLocalModuleWithoutExport.ts (2 errors) ====
    export module a {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export enum weekend {
            Friday,
            Saturday,
            Sunday
        }
    }
    
    export module c {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import b = a.weekend;
        export var bVal: b = b.Sunday;
    }
    